<resources>
    <string name="app_name">U4_T8</string>

    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="task_data_empty">Task name is empty</string>
    <string name="to_finish_when">To finish when?</string>
    <string name="describe_the_task">Describe the task</string>
    <string name="add_task_activity_name">New Task</string>
    <string name="name_of_the_task_to_do">Name of the task to do</string>
    <string name="priority">Priority:</string>
    <string name="status">Status:</string>
</resources>
