<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddTaskActivity">

    <EditText
        android:id="@+id/etTodo"
        android:layout_width="327dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:ems="25"
        android:hint="@string/name_of_the_task_to_do"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etToAccomplish"
        android:layout_width="330dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/to_finish_when"
        android:inputType="textPersonName"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="@+id/etTodo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/etTodo"
        app:layout_constraintTop_toBottomOf="@+id/etTodo" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/describe_the_task"
        android:inputType="textPersonName"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="@+id/etToAccomplish"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etToAccomplish"
        app:layout_constraintTop_toBottomOf="@+id/etToAccomplish" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:onClick="onClick"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="@+id/spinnerStatus"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/spinnerPriority"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="146dp"
        android:layout_height="30dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="144dp"
        android:layout_height="31dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/priority"
        app:layout_constraintStart_toStartOf="@+id/etDescription"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:text="@string/status"
        app:layout_constraintEnd_toEndOf="@+id/etDescription"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>